# systems-stats

./: Cargo.toml  README.md
src/: args.rs  main.rs  systeminfo.rs
