[package]
name = "systems-stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
systemstat = { version = "0.2.3", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.91", features = ["derive"] }
serde_json = "1.0.91" 
clap = { version = "4.4.18", features = ["derive"] }